--- a/content/_data/figures.yaml
+++ b/content/_data/figures.yaml
@@ -2174,112 +2174,112 @@ figure_list:
   - id: "fig-46-1-a"
     src: "figures/fig-46-1-a.jpg"
     zoom: true
-    label: "Figure 46.1a"
+    label: "a"
     # caption: "El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 × 360 cm (189 × 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft (de los Rios y Rojas and Socorro 1977). &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a and b) de los Rios y Rojas and Socorro 1977, &#40;c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-1-b"
     src: "figures/fig-46-1-b.jpg"
     zoom: true
-    label: "Figure 46.1b"
+    label: "b"
 
   - id: "fig-46-1-c"
     src: "figures/fig-46-1-c.png"
     zoom: true
-    label: "Figure 46.1c"
+    label: "c"
 
   - id: "fig-46-1-d"
     src: "figures/fig-46-1-d.jpg"
     zoom: true
-    label: "Figure 46.1d"
+    label: "d"
 
   - id: "fig-46-2-a"
     src: "figures/fig-46-2-a.jpg"
     zoom: true
-    label: "Figure 46.2a"
+    label: "a"
     # caption: "Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–45. Oil on canvas, 206 × 288.5 cm (81 1/8 × 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) National Gallery London, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-2-b"
     src: "figures/fig-46-2-b.jpg"
     zoom: true
-    label: "Figure 46.2b"
+    label: "b"
 
   - id: "fig-46-2-c"
     src: "figures/fig-46-2-c.png"
     zoom: true
-    label: "Figure 46.2c"
+    label: "c"
 
   - id: "fig-46-2-d"
     src: "figures/fig-46-2-d.jpg"
     zoom: true
-    label: "Figure 46.2d"
+    label: "d"
 
   - id: "fig-46-3-a"
     src: "figures/fig-46-3-a.jpg"
     zoom: true
-    label: "Figure 46.3a"
+    label: "a"
     # caption: "Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–7. Oil on canvas, 202.5 × 152.7 cm (79 3/4 × 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) Cleveland Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-3-b"
     src: "figures/fig-46-3-b.jpg"
     zoom: true
-    label: "Figure 46.3b"
+    label: "b"
 
   - id: "fig-46-3-c"
     src: "figures/fig-46-3-c.png"
     zoom: true
-    label: "Figure 46.3c"
+    label: "c"
 
   - id: "fig-46-3-d"
     src: "figures/fig-46-3-d.jpg"
     zoom: true
-    label: "Figure 46.3d"
+    label: "d"
 
   - id: "fig-46-4-a"
     src: "figures/fig-46-4-a.jpg"
     zoom: true
-    label: "Figure 46.4a"
+    label: "a"
     # caption: "Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–23. Oil on canvas, 123.2 × 132.7 cm (48 1/2 × 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) Metropolitan Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-4-b"
     src: "figures/fig-46-4-b.jpg"
     zoom: true
-    label: "Figure 46.4b"
+    label: "b"
 
   - id: "fig-46-4-c"
     src: "figures/fig-46-4-c.png"
     zoom: true
-    label: "Figure 46.4c"
+    label: "c"
 
   - id: "fig-46-4-d"
     src: "figures/fig-46-4-d.jpg"
     zoom: true
-    label: "Figure 46.4d"
+    label: "d"
 
   - id: "fig-46-5-a"
     src: "figures/fig-46-5-a.jpg"
     zoom: true
-    label: "Figure 46.5a"
+    label: "a"
     # caption: "Diego Velázquez (Spanish, 1599–1660), *Education of the Virgin*, 1617–18. Oil on canvas, 168 × 136 cm (66 1/8 × 53 1/2 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas."
     # credit: "Images: (a) Yale University Art Gallery, (b and c) Lab O, (d) Lab O / João Mariano"
 
   - id: "fig-46-5-b"
     src: "figures/fig-46-5-b.jpg"
     zoom: true
-    label: "Figure 46.5b"
+    label: "b"
 
   - id: "fig-46-5-c"
     src: "figures/fig-46-5-c.png"
     zoom: true
-    label: "Figure 46.5c"
+    label: "c"
 
   - id: "fig-46-5-d"
     src: "figures/fig-46-5-d.jpg"
     zoom: true
-    label: "Figure 46.5d"
+    label: "d"
 
   - id: "fig-47-1"
     src: "figures/fig-47-1.jpg"
@@ -2340,31 +2340,31 @@ figure_list:
   - id: "fig-48-4-a"
     src: "figures/fig-48-4-a.jpg"
     zoom: true
-    label: "Figure 48.4a"
+    label: "a"
     # caption: "The tear area after removal of beeswax and overpaint followed by thread-by-thread mending with a 5% solution of polyvinyl butyral. (a) Front of painting. (b) Reverse of painting, showing threads from canvas edges were added for reinforcement."
     # credit: "Images: Department of Scientific Conservation of Oil Paintings, State Research Institute for Restoration (GOSNIIR) / Photo: Anton Mikhailov"
 
   - id: "fig-48-4-b"
     src: "figures/fig-48-4-b.jpg"
     zoom: true
-    label: "Figure 48.4b"
+    label: "b"
 
   - id: "fig-49-1-a"
     src: "figures/fig-49-1-a.jpg"
     zoom: true
-    label: "Figure 49.1a"
+    label: "a"
     # caption: "(a) Initial test areas with Evolon CR tissue and solvent on the verso of a painting following wax lining reversal. (b) Applying 1 mL of solvent to Evolon CR tissue. &#40;c) Removal of Evolon CR after prescribed dwell time."
     # credit: "Julianna Ly"
 
   - id: "fig-49-1-b"
     src: "figures/fig-49-1-b.jpg"
     zoom: true
-    label: "Figure 49.1b"
+    label: "b"
 
   - id: "fig-49-1-c"
     src: "figures/fig-49-1-c.jpg"
     zoom: true
-    label: "Figure 49.1c"
+    label: "c"
 
   - id: "fig-49-2"
     src: "figures/fig-49-2.png"
@@ -2388,24 +2388,24 @@ figure_list:
   - id: "fig-49-4-a"
     src: "figures/fig-49-4-a.jpg"
     zoom: true
-    label: "Figure 49.4a"
-    # caption: "SEM BSE images of unused tissue: (a) control, (b) after iteration 1, &#40;c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137X by Dr. Judy Rudolph, volunteer conservation scientist, Scientific Research and Analysis lab, Winterthur Museum, Garden, and Library.)"
+    label: "a"
+    # caption: "SEM BSE images of unused tissue: (a) control, (b) after iteration 1, &#40;c) after iteration 2, (d) after iteration 3. (Surface morphology changes visualized in SEM BSE images captured at 137× by Dr. Judy Rudolph, volunteer conservation scientist, SRAL, Winterthur Museum."
     # credit: "Images: Judy Rudolph"
 
   - id: "fig-49-4-b"
     src: "figures/fig-49-4-b.jpg"
     zoom: true
-    label: "Figure 49.4b"
+    label: "b"
 
   - id: "fig-49-4-c"
     src: "figures/fig-49-4-c.jpg"
     zoom: true
-    label: "Figure 49.4c"
+    label: "c"
 
   - id: "fig-49-4-d"
     src: "figures/fig-49-4-d.jpg"
     zoom: true
-    label: "Figure 49.4d"
+    label: "d"
 
   - id: "fig-49-5"
     src: "figures/fig-49-5.png"
@@ -2417,14 +2417,14 @@ figure_list:
   - id: "fig-49-6-a"
     src: "figures/fig-49-6-a.png"
     zoom: true
-    label: "Figure 49.6a"
+    label: "a"
     # caption: "(a) Weight increases (in grams) for each tissue exposed to the solvents or mixtures tested. (b) Py‑GCMS analysis of the three solvents: solvent 1 is 100% acetone, solvent 2 is 1:1 acetone and petroleum benzine, and solvent 3 is 1:9 acetone and petroleum benzine. (Py-GCMS analysis conducted by Dr. W. Chris Petersen, Volunteer Conservation Scientist and Affiliated Associate Professor, Scientific Research and Analysis lab, Winterthur Museum, Garden and Library.) "
     # credit: "Images: a: Julianna Ly and Tracy Liu; b: Chris Petersen, Tracy Liu"
 
   - id: "fig-49-6-b"
     src: "figures/fig-49-6-b.png"
     zoom: true
-    label: "Figure 49.6b"
+    label: "b"
 
   - id: "fig-50-1"
     src: "figures/fig-50-1.png"
@@ -2472,31 +2472,31 @@ figure_list:
     media_type: table
 
   - id: "table-51-2"
-    credit: "Table: Courtesy of the research team"
+    # credit: "Table: Courtesy of the research team"
     src: "tables/table-51-2.html"
     media_type: table
 
   - id: "table-51-3"
-    credit: "Table: Courtesy of the research team"
+    # credit: "Table: Courtesy of the research team"
     src: "tables/table-51-3.html"
     media_type: table
 
   - id: "fig-51-2-a"
     src: "figures/fig-51-2-a.png"
     zoom: true
-    label: "Figure 51.2a"
+    label: "a"
     # caption: "Restraint tests of different lining fabrics and glue-paste linings. (a) Force development of open- and close-weave lining canvases (alone) when subjected to different RH. (b) Force development of rye T70, linings as a function of the weave geometry of the lining canvas when subjected to different RH. &#40;c) Force development of Manitoba wheat T55, linings as a function of the weave geometry of the lining canvas when subjected to different RH."
-    # credit: "Image: Courtesy of the research team"
+    # credit: "Images: Courtesy of the research team"
 
   - id: "fig-51-2-b"
     src: "figures/fig-51-2-b.png"
     zoom: true
-    label: "Figure 51.2b"
+    label: "b"
 
   - id: "fig-51-2-c"
     src: "figures/fig-51-2-c.png"
     zoom: true
-    label: "Figure 51.2c"
+    label: "c"
 
   - id: "fig-51-3"
     src: "figures/fig-51-3.jpg"
@@ -2505,12 +2505,27 @@ figure_list:
     caption: "Detail of the two canvases with glue-paste applied. (a) Tight weave: a continuous glue-paste film. (b) Open weave: fractured glue-paste film."
     credit: "Images: Courtesy of the research team"
 
-  - id: "fig-51-4"
-    src: "figures/fig-51-4.jpg"
+  - id: "fig-51-4-a"
+    src: "figures/fig-51-4-a.jpg"
     zoom: true
-    label: "Figure 51.4"
-    caption: "Detail of microbiological study. Binocular examination of contaminated samples at the end of the test (25× magnification), showing spores and mycelium of mold species that have contaminated the samples. (a) Rye T70, open-weave fabric. (b) Wheat T80, close-weave fabric."
-    credit: "Image: Courtesy of the research team"
+    label: "a"
+   # caption: "Detail of microbiological study. Binocular examination of contaminated samples at the end of the test (25× magnification), showing spores and mycelium of mold species that have contaminated the samples. (a) Rye T70, open-weave fabric. (b) Wheat T80, close-weave fabric."
+   # credit: "Image: Courtesy of the research team"
+
+  - id: "fig-51-4-b"
+    src: "figures/fig-51-4-b.jpg"
+    zoom: true
+    label: "b"
+
+  - id: "fig-51-4-c"
+    src: "figures/fig-51-4-c.jpg"
+    zoom: true
+    label: "c"
+
+  - id: "fig-51-4-d"
+    src: "figures/fig-51-4-d.jpg"
+    zoom: true
+    label: "d"
 
   - id: "fig-51-5"
     src: "figures/fig-51-5.png"
