Update config values

--- a/content/_data/publication.yaml
+++ b/content/_data/publication.yaml
@@ -6,6 +6,10 @@
 # publication.
 
 # ------------------------------------------------------------------------------
+# The publication's base URL, i.e. 'https://www.my-publication.org'
+url: 'http://localhost:8080'
+
+# ------------------------------------------------------------------------------
 # Title & Description
 title: Conserving Canvas
 subtitle:
