--- a/content/_data/config.yaml
+++ b/content/_data/config.yaml
@@ -1,42 +1,48 @@
-baseURL: 'https://first-pages--conserving-canvas.netlify.app'
+analytics:
+  googleId: ''
 
-title: Quire Starter
-languageCode: en-us
-theme: default
-publishDir: site
-
-footnoteReturnLinkContents: '↩'
-GoogleAnalytics: ''
-
-pluralizeListTitles: true
-disableKinds:
-  - home
-  - section
-  - taxonomy
-  - term
-
-quire_credit_line: "This publication was created using Quire™, a multiformat publishing tool from Getty."
-
-params:
-  citationPageLocationDivider: ', '
-  citationPopupStyle: text # text | icon
-  contributorByline: name-title # name | name-title | false
-  entryPageObjectLinkText: View in Collection
-  entryPageSideBySideLayout: false
-  figureModal: true
-  figureModalIcons: true
-  figureZoom: true
-  imageDir: '/_assets/images'
-  licenseIcons: true
-  menuType: full
-  nextPageButtonText: Next
-  pageContributorDivider: ' — '
-  pageLabelDivider: '. '
-  prevPageButtonText: Back
-  searchEnabled: true
-  tocType: full
+bylineFormat: name-title # name | name-title | false
 
 bibliography:
-  displayOnPage: false
+  displayOnPage: true
   displayShort: true
   heading: Bibliography
+
+citations:
+  divider: ', '
+  popupStyle: text # text | icon
+
+entryPage:
+  sideBySide: false
+  objectLinkText: View in Collection
+
+epub:
+  defaultCoverImage: 'epub-cover.png'
+  outputDir: '_epub'
+
+footnotes:
+  backlinkSymbol: '↩'
+
+figures:
+  assetDir: '/_assets/'
+  enableModal: true
+  imageDir: '/_assets/images'
+
+licenseIcons: true
+
+localization:
+  defaultLocale: en-us
+
+menuType: full # full | brief
+
+navigation:
+  nextButtonText: Next
+  prevButtonText: Back
+
+pageTitle:
+  labelDivider: '. '
+
+searchEnabled: true
+
+tableOfContents:
+  contributorDivider: ' — '
