--- a/content/_data/config.yaml
+++ b/content/_data/config.yaml
@@ -4,7 +4,7 @@ analytics:
 bylineFormat: name-title # name | name-title | false
 
 bibliography:
-  displayOnPage: true
+  displayOnPage: false
   displayShort: true
   heading: Bibliography
 
