Fix some copyright and frontmatter issues

--- a/content/_data/publication.yaml
+++ b/content/_data/publication.yaml
@@ -86,7 +86,7 @@ contributor:
 copyright: © 2023 J. Paul Getty Trust
 
 license:
-  name: Creative Commons Attribution-NonCommercial 4.0 International License
+  name: Creative Commons Attribution‑NonCommercial 4.0 International License
   abbreviation: CC BY-NC
   url: https://creativecommons.org/licenses/by-nc/4.0/
   scope: text-only # full | text-only | some-exceptions
